Atributo birth insertado en users
